--- a/cn/index.html
+++ b/cn/index.html
@@ -2,7 +2,8 @@
 <html lang="zh">
 
 <head> 
-   
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4610974633549137"
+     crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -866,6 +867,8 @@
             </div>
             <br />
             <!--END 发现产品 -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4610974633549137"
+     crossorigin="anonymous"></script>           
             <!-- 界面灵感 -->
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="界面灵感"></i>界面灵感</h4>
             <div class="row">
