--- a/cn/index.html
+++ b/cn/index.html
@@ -469,7 +469,7 @@
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="界面灵感"></i>推荐</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.aliyun.com/minisite/goods?userCode=xtct5egx&share_source=copy_link', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.aliyun.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.aliyun.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.aliyun.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/aliyun.png" class="lozad img-circle" width="40">
@@ -478,7 +478,7 @@
                                 <a href="#" class="xe-user-name overflowClip_1">
                                     <strong>阿里云</strong>
                                 </a>
-                                <p class="overflowClip_2">点击领取2000元限量云产品优惠券</p>
+                                <p class="overflowClip_2">阿里云</p>
                             </div>
                         </div>
                     </div>
@@ -499,7 +499,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://xiyou4you.us/r/?s=13731627', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://xiyou4you.us">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/xiyou.png" class="lozad img-circle" width="40">
@@ -508,7 +508,7 @@
                                 <a href="#" class="xe-user-name overflowClip_1">
                                     <strong>西游-科学上网</strong>
                                 </a>
-                                <p class="overflowClip_2">优秀的科学上网（略贵，但是贼稳，点击注册领取优惠券）</p>
+                                <p class="overflowClip_2"></p>
                             </div>
                         </div>
                     </div>
