--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
    
     <meta charset="UTF-8">
+    <meta name="google-adsense-account" content="ca-pub-4610974633549137">
     <title>设计网站导航</title>
     <script>
     if (navigator.appName == "Netscape") {
