--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="zh">
 
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4610974633549137"
+     crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./assets/images/favicon.png">
     
    
