--- a/en/index.html
+++ b/en/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4610974633549137"
+     crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="yyx" />
-    <title>WebStack.cc - Collection of resources and tools for Designers</title>
+    <title>Collection of resources and tools for Designers</title>
+    <meta name="google-adsense-account" content="ca-pub-4610974633549137">
     <meta name="keywords" content="UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,UX师网址导航">
     <meta name="description" content="收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、Resources网站，定时更新分享优质产品设计书签。">
     <link rel="shortcut icon" href="../assets/images/favicon.png">
@@ -586,6 +588,8 @@
             </div>
             <br />
             <!--END 推荐 -->
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4610974633549137"
+     crossorigin="anonymous"></script>
             <!-- Information -->
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="Information"></i>Information</h4>
             <div class="row">
