--- a/en/index.html
+++ b/en/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4610974633549137"
-     crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4610974633549137" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -526,7 +525,7 @@
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="界面灵感"></i>Recommended</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.aliyun.com/minisite/goods?userCode=xtct5egx&share_source=copy_link', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.aliyun.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.aliyun.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.aliyun.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/aliyun.png" class="lozad img-circle" width="40">
@@ -541,7 +540,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://xiyou4you.us/r/?s=13731627', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://xiyou4you.us">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://xiyou4you.us/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://xiyou4you.us">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/xiyou.png" class="lozad img-circle" width="40">
@@ -588,8 +587,7 @@
             </div>
             <br />
             <!--END 推荐 -->
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4610974633549137"
-     crossorigin="anonymous"></script>
+
             <!-- Information -->
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="Information"></i>Information</h4>
             <div class="row">
